--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -239,3 +239,32 @@ div[orientation='vertical'] > .theia-debug-entry > .theia-TreeContainer > div > 
 .theia-debug-console-unavailable {
     font-style: italic;
 }
+
+.theia-debug-console-expression {
+    display: flex;
+    flex-direction: column;
+}
+
+.theia-debug-console-variable {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: var(--theia-variable-value-color);
+}
+
+.theia-debug-console-variable.number {
+    color: var(--theia-number-variable-color);
+}
+
+.theia-debug-console-variable.boolean {
+    color: var(--theia-boolean-variable-color);
+}
+
+.theia-debug-console-variable.string {
+    color: var(--theia-string-variable-color);
+}
+
+.theia-debug-console-variable .name {
+    color: var(--theia-variable-name-color);
+}
